--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,6 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   host: localhost
-  username: alex
-  password: Praha650
 
 development:
   <<: *default
@@ -84,5 +82,5 @@ test:
 production:
   <<: *default
   database: lalala_production
-  username: lalala
+  username: username
   password: <%= ENV['LALALA_DATABASE_PASSWORD'] %>
